# rs-conllu

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  lib.rs  parsers.rs  token.rs
tests/: example.conllu  file_parse_test.rs
