[package]
name = "rs-conllu"
description = "A parser for the CoNLL-U format of the Universal Dependencies project."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
thiserror = "1.0.40"
walkdir = "2.3.2"
